--- a/shared.css
+++ b/shared.css
@@ -8,6 +8,26 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 15px 60px;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+header a {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+  color: rgb(255, 251, 0);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 12px;
+  border-radius: 6px;
+  transition: 0.2s ease-in all;
+}
+
+header li a:hover {
+  background-color: rgb(255, 251, 0);
+  color: rgb(77, 77, 77);
+  text-shadow: none;
 }
 
 header ul {
