--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,43 @@
 #hero-content a:hover {
   background-color: rgb(255, 227, 0);
 }
+
+#highlights h2 {
+  color: rgb(59, 65, 64);
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 40px;
+  margin: 24px 0;
+}
+
+#destinations {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  margin: 0 auto 40px;
+}
+
+.destination {
+  margin: 0 20px;
+  width: 25%;
+}
+
+.destination img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 2px 4px 8px rgb(68, 67, 67);
+}
+
+.destination p {
+  color: rgb(124, 123, 123);
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+.destination strong {
+  color: rgb(0, 160, 117);
+}
