--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,11 @@
   background-color: rgb(255, 227, 0);
 }
 
+#highlights {
+  padding: 24px;
+  background: linear-gradient(0deg, rgb(227, 255, 253), rgb(202, 243, 240));
+}
+
 #highlights h2 {
   color: rgb(59, 65, 64);
   text-align: center;
