--- a/places.css
+++ b/places.css
@@ -1,12 +1,50 @@
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
+  color: rgb(68, 68, 68);
 }
 
 header {
   position: static;
 }
 
+main ul {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+main li {
+  background-color: #fff;
+  width: 500px;
+  display: flex;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+.item-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 24px;
+}
+
+.actions {
+  text-align: right;
+}
+
+.actions a {
+  text-decoration: none;
+  color: rgb(22, 211, 228);
+  padding: 6px;
+  border-radius: 6px;
+}
+
+.actions a:hover {
+  background-color: rgb(235, 253, 255);
+}
+
 main li img {
   width: 300px;
   height: 280px;
+  object-fit: cover;
 }
