--- a/places.css
+++ b/places.css
@@ -7,18 +7,34 @@ header {
   position: static;
 }
 
+header a,
+#page-logo a {
+  color: rgb(183, 230, 235);
+}
+
+header nav a:hover {
+  background-color: rgb(183, 230, 235);
+  color: rgb(68, 68, 68);
+}
+
 main ul {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 48px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
 main li {
   background-color: #fff;
-  width: 500px;
   display: flex;
   border-radius: 6px;
   overflow: hidden;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+main li:nth-of-type(3) {
+  grid-column: 1 / span 2;
 }
 
 .item-content {
@@ -26,6 +42,10 @@ main li {
   flex-direction: column;
   justify-content: space-between;
   padding: 24px;
+}
+
+.item-content h2 {
+  margin: 0;
 }
 
 .actions {
